--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 
-.idea/instapk.xml
+.idea
 instapk.log*
+libs/
+src/main/res/drawable/
